# coupang_coupon_issuer

./: .gitignore  ANTIGRAVITY.md  CLAUDE.md  README.md  docker-compose.test.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: build.yml  release.yml
docs/: DEVELOPMENT.md  DEVELOPMENT.md.old  DEV_LOG.md  TESTING.md  USER_GUIDE.md
docs/adr/: 001-excel-structure.md  002-input-normalization.md  003-api-authentication.md  004-fixed-configuration-values.md  005-systemd-service.md  006-contract-id-free-budget.md  007-coupon-issuance-workflow.md  008-cli-restructuring.md  009-excel-6-column-structure.md  010-crontab-service.md  011-jitter-thundering-herd.md  012-xdg-base-directory.md  013-pyinstaller-single-binary.md  014-script-based-deployment.md  015-option-id-column.md  016-test-layer-separation.md  017-coupon-type-specific-validation.md  018-korean-discount-type-names.md  019-setup-install-separation.md  020-instant-coupon-simple-polling.md  021-excel-9-column-structure.md  022-download-coupon-timing-fix.md  023-download-coupon-expiration.md
docs/coupang/: contract-list-api.md  download-coupon-api.md  download-coupon-expire-api.md  download-coupon-item-api.md  download-coupon-status-api.md  instant-coupon-api.md  instant-coupon-item-api.md  instant-coupon-status-api.md  parameters-explained.md  workflow.md
examples/: basic.xlsx  comprehensive.xlsx  edge_cases.xlsx
scripts/: generate_example.py
src/coupang_coupon_issuer/: __init__.py  config.py  coupang_api.py  issuer.py  jitter.py  logging_config.py  reader.py  scheduler.py  (+2 more)
tests/: conftest.py
(+29 files in other folders)
