[project]
name = "coupang-coupon-issuer"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.5",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "requests-mock>=1.11.0",
    "freezegun>=1.4.0",
    "testcontainers>=3.7.0",
    "tzdata>=2025.3",
]

build = [
    "pyinstaller>=6.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
